--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,6 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    image: python:3.10
     volumes:
       - .:/app
-    environment:
-      - PYTHONUNBUFFERED=1
